--- a/Flutter/bmi_calc/pubspec.yaml
+++ b/Flutter/bmi_calc/pubspec.yaml
@@ -1,4 +1,4 @@
-name: xylophone
+name: bmi_calculator
 description: A new Flutter application.
 
 version: 1.0.0+1
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  # Use Audioplayers dependency version 0.17.4
-  audioplayers: ^0.20.1
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +19,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/
-    - assets/note1.wav
-
