--- a/Flutter/clima_weather/pubspec.yaml
+++ b/Flutter/clima_weather/pubspec.yaml
@@ -1,4 +1,4 @@
-name: xylophone
+name: clima
 description: A new Flutter application.
 
 version: 1.0.0+1
@@ -11,8 +11,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  # Use Audioplayers dependency version 0.17.4
-  audioplayers: ^0.20.1
+  geolocator: ^8.2.1
+  http: ^0.13.4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +21,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/
-    - assets/note1.wav
 
+  assets:
+    - images/
+    - fonts/
+
+  fonts:
+    - family: Spartan MB
+      fonts:
+        - asset: fonts/SpartanMB-Black.otf
+          weight: 900
