--- a/Flutter/destini/pubspec.yaml
+++ b/Flutter/destini/pubspec.yaml
@@ -1,4 +1,4 @@
-name: xylophone
+name: destini_challenge_starting
 description: A new Flutter application.
 
 version: 1.0.0+1
@@ -9,10 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^0.1.2
-  # Use Audioplayers dependency version 0.17.4
-  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +18,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/
-    - assets/note1.wav
-
+  - images/
