--- a/Flutter/flash_chat/pubspec.yaml
+++ b/Flutter/flash_chat/pubspec.yaml
@@ -1,18 +1,21 @@
-name: xylophone
+name: flash_chat
 description: A new Flutter application.
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.1.0<3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  # Use Audioplayers dependency version 0.17.4
-  audioplayers: ^0.20.1
+  animated_text_kit: ^4.2.1
+  firebase_core: ^1.16.0
+  firebase_auth: ^3.3.17
+  cloud_firestore: ^3.1.14
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/
-    - assets/note1.wav
 
+  assets:
+    - images/
