--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ Python/MATLAB/
 Flutter/google-clone-flutter-master/lib/
 Projects/CS253_Project_MindHive-main/
 Flutter/google-clone-flutter-master/
+Python/Django/
+Forage/
+Python/Deloitte Task/
